[tool.poetry]
name = "jupyter-lab"
version = "0.1.0"
description = "This is a Docker image that provides a Jypter lab in which predefined packages such as Plotly or PyTorch are installed"
authors = ["Nils Uhrberg <nils.uhrberg@codecentric.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
ipywidgets = "^8.1.1"
torch = "2.0.0"
torchvision = "~0.15.0"
torchaudio = "~2.0.0"
timm = "^0.9.12"
pytorch-lightning = "^2.1.2"
jupyterlab-lsp = "^5.0.1"
jupyter-lsp = "^2.2.1"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
